changed the logo

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <link href="/src/index.css" rel="stylesheet">
-    <title>Food Villa</title>
+    <title>DeliveryQube</title>
   </head>
   <body>
     <div id="root">Not Rendered</div>
